--- a/Projects/portfolio website/style.css
+++ b/Projects/portfolio website/style.css
@@ -426,13 +426,16 @@ video{
   background-size: 100% 100%;
   opacity: 0;
 }
+
 .page3 #card3{
-    background-image: url("/img/two\ good2.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  opacity: 0;
+    background-image: url("/img/twogood2.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    opacity: 0;
+    
 }
+
 
 .page3 #card1:hover{
     scale: 1.03;
