--- a/Projects/project 4/style.css
+++ b/Projects/project 4/style.css
@@ -85,7 +85,7 @@ body{
 .menu{
     height: 100vh;
     width: 100%;
-    background-color:#111;
+    /* background-color:#111; */
     color: #fff;
     position: absolute;
     z-index: -20;
@@ -94,6 +94,7 @@ body{
     align-items:end;
     justify-content: space-between;
     padding: 10px 10px;
+    /* background-color: red; */
 }
 
 .menu .contenercardx{
@@ -310,6 +311,7 @@ body{
     position: relative;
     padding: 0 2vw;
     padding-top: 15vh;
+    
 
 }
 
@@ -368,14 +370,14 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 3vw 2vw 3vw 2vw;
+    padding: 0px 50px;
+    /* background-color: red; */
     
 }
 .page2 .elem{
     height: 90vh;
     width: 30vw;
     position: relative;
-    /* background-color: red; */
 }
 
 .page2 img{
@@ -383,47 +385,74 @@ body{
     width: 100%;
     object-fit: cover;
     object-position: center;
-
 }
-/* changes */
-.page2 .elem .dets{
-    height: 60px;
-    width: 70%;
-    border-radius: 30px;
+
+
+.contener1 .dets{
+    height: 3.5vw;
+    width: 25vw;
+    top:50%;
+    left: 7%;
+    right: 50%;
+    border-radius: 20px;
     position: absolute;
     z-index: 9;
-    top: 50%;
-    left: 15%;
-    transform: translate(-50%,-50%);
+    text-align: center;
     background-color:blanchedalmond;
-
 }
 
-/* .page2 .elem .dets:hover{
-    height: 300px;
-} */
+
+
+
+.cotener2 .dets{
+    height: 3.5vw;
+    width: 25vw;
+    top:50%;
+    left: 7%;
+    right: 50%;
+    border-radius: 20px;
+    position: absolute;
+    z-index: 9;
+    text-align: center;
+    background-color:blanchedalmond;
+}
+
+.contener3 .dets{
+    height: 3.5vw;
+    width: 25vw;
+    top:50%;
+    left: 7%;
+    right: 50%;
+    border-radius: 20px;
+    position: absolute;
+    z-index: 9;
+    text-align: center;
+    background-color:blanchedalmond;
+}
 
 .contener1 .dets:hover{
-    height: 300px;
+    height: 16vw;
 
 }
 
 .cotener2 .dets:hover{
-    height: 300px;
+    height: 16vw;
 
 }
 
 .contener3 .dets:hover{
-    height: 300px;
+    height: 16vw;
 
 }
 
 .page2 .elem .dets ul{
-    margin-left: 40px;
-    padding-top: 20px;
-    font-size: 20px;
-
+    margin-left: 3vw;
+    padding-top: 1vw;
+    font-size: 1vw;
 }
+
+
+
 
 .page2 span{
     padding-left: 4vw;
@@ -431,17 +460,30 @@ body{
     font-weight: 800;
 }
 
-.page2 li{
-    font-size: 2vh;
-    padding-left: 2vw;
-
-}
 
 .page2 #gifts{
     margin-left: -70px;
     margin-right: -20px;
 
 }
+
+
+.cotener2 p{
+    font-size: 1vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 300;
+    padding-top: 0.7vw;
+}
+
+.cotener2 p strong{
+    margin: 10px 40px;
+}
+
+
+
+/* hover box */
 
 .page2 .box{
     display: flex;
@@ -451,7 +493,7 @@ body{
 }
 
 .page2 .box img{
-    height: 120px;
+    height: 6.5vw;
     width: 100%;
     object-fit: cover;
     object-position: center;
@@ -461,8 +503,8 @@ body{
 
 .page2 #botel{
     margin-top: -4vh;
-    height: 170px;
-    width: 50%;
+    height: 9vw;
+    width: 100%;
 }
 
 
@@ -488,7 +530,6 @@ body{
 
 .cotener2 ul li #gifts{
     padding-left: 80px;
-    
 }
 
 
@@ -982,93 +1023,145 @@ body{
 
     .page2{
         min-height: 100vh;
-        width: 100vw;
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
         position: relative;
-        /* padding: 3vw 2vw 3vw 2vw; */
+        padding-top: 5vh;
         
     }
     .page2 .elem{
-        height: 100vh;
-        width: 100%;
+        height: 80vh;
+        width: 90vw;
         margin-bottom: 2vh;
-        /* background-color: red; */
     }
     
     .page2 img{
         height: 100%;
         width: 100%;
-        padding:2vh;
         object-fit: cover;
         object-position: center;
     
     }
     
-    /* .dets{
-        height: 3vw;
-        width: 70%;
-        border-radius: 30px;
+        
+    .contener1 .dets{
+        height: 10vw;
+        width: 65vw;
+        top:50%;
+        left: 14%;
+        border-radius: 20px;
         position: absolute;
         z-index: 9;
-        top: 50%;
-        left: 15%;
-        transform: translate(-50%,-50%);
+        text-align: center;
         background-color:blanchedalmond;
-    
-    } */
-
-    .page2 .contener1 .dets{
-        left: 20%;
-        height: 7.5vw;
-        width: 60%;
-        
     }
 
 
-    .page2 .cotener2 .dets{
-        left: 20%;
-        height: 7.5vw;
-        width: 60%;
-    }
 
 
-    .page2 .contener3 .dets{
-        left: 20%;
-        height: 7.5vw;
-        width: 60%;
+    .cotener2 .dets{
+        height: 10vw;
+        width: 65vw;
+        top:50%;
+        left: 14%;
+        border-radius: 20px;
+        position: absolute;
+        z-index: 9;
+        text-align: center;
+        background-color:blanchedalmond;
     }
-    
-    .page2 .elem .dets:hover{
-        height: 250px;
+
+    .contener3 .dets{
+        height: 10vw;
+        width: 65vw;
+        top:50%;
+        left: 14%;
+        border-radius: 20px;
+        position: absolute;
+        z-index: 9;
+        text-align: center;
+        background-color:blanchedalmond;
+    }
+
+    .contener1 .dets:hover{
+        height: 60vw;
+
+    }
+
+    .cotener2 .dets:hover{
+        height: 60vw;
+
+    }
+
+    .contener3 .dets:hover{
+        height: 60vw;
+
     }
 
     .page2 .elem .dets ul{
-        margin-top: -7px;
-        /* margin-left: -2px; */
+        margin-left:7vw;
+        padding-top: 3vw;
+        font-size: 3vw;
     }
+
+
+
+
+    .page2 span{
+        padding-left: 5vw;
+    }
+
+
+    .cotener2 p{
+        font-size: 3vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 300;
+    }
+
+    .cotener2 p strong{
+        margin: 10px;
+    }
+
+
+/* hover box */
+
+.page2 .box{
+    margin-top: 5vh;
+}
+
+.page2 .box img{
+    height: 18vw;
+    width: 100%;
+
+}
+
+.page2 #botel{
+    margin-top: -4vh;
+    height: 25vw;
+    width: 100%;
+}
+
+
+
+.page2 .box2{
+    width: 100%;
+    padding: 0.5vh;
+    margin-top: -2vw;
     
-    .page2 .elem .dets li{
-        margin-left: 2vw;
-        font-size: 12px;
-    }
+}
 
-    .page2 .elem .dets span{
-        margin-left: 5vw;
-    }
+.page2 .box2 h5{
+    font-size: 2vw;
 
-    .cotener2 ul li #gifts{
-        padding-left: 80px;
-        
-    }
+}
 
-    .page2 .box2{
-        margin-top: -3vh;
-    }
 
-    /* page3 */
+/* page3 */
 
 
     .page3{
