--- a/backend/pratise backend/practice project pin/pin/views/index.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/index.ejs
@@ -1,11 +1,217 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<% include ./partial/header.ejs %>
+    <div class="main">
+        <div class="page1">
+            <h1>CHANGE</h1>
+            <h1>THE COURSE</h1>
+            <div class="video-contener">
+                <p class="play">Play</p>
+                <video autoplay muted loop src="/videos/final.mp4"></video>
+            </div>
+            <div class="hading">
+                <h5>BUT GOOD</h5>
+                <h5>DO GOOD</h5>
+            </div>
+
+        </div>
+
+        <div class="page2">
+            <div class="elem elem1">
+                <img data-scroll data-scroll-speed="1"
+                    src="https://cdn.sanity.io/images/w8f1ak3c/production/a54b969c847029357a401e2d8ea5d52abd5451d0-2250x1500.jpg/DSC0051_Dexter%20Kim%20copy.jpg?rect=675,0,900,1500&w=1024&h=1707&fit=min&auto=format"
+                    alt="">
+                <div class="contener1">
+                    <div data-scroll data-scroll-speed="-1" class="dets">
+                        <ul>
+                            <li>SHOP <span>MESSINA</span> <span>></span></li>
+                        </ul>
+                        <div class="box">
+                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/6a73d4df28963d86c7f9dd49f805b8ec84774bd5-4672x7008.png/DSC0069_Dexter%20Kim%20copy.png?rect=0,755,4672,5326&fp-x=0.5&fp-y=0.4669448529411765&w=640&h=730&fit=crop&crop=focalpoint&auto=format"
+                                alt="">
+                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d6c7e5bbcf3445fccb7e221bc5b1b9fd94d83362-5000x5000.png/DSC0032_Dexter%20Kim.png?w=640&h=640&auto=format"
+                                alt="">
+                        </div>
+                        <div class="box2">
+                            <h5>MASSINA X TO GOOD TO MISS CHOCLATE BROWING BAR </h5>
+                            <h5>THE INSIDE SCOOP GOOD FEEL CRACKERS SET</h5>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="elem elem2">
+                <img data-scroll data-scroll-speed="1"
+                    src="https://cdn.sanity.io/images/w8f1ak3c/production/bc3f529e3f10086db91822f615caf549a260362d-1500x2250.jpg/DSC0083_Dexter%20Kim.jpg?rect=75,0,1350,2250&w=1024&h=1707&fit=min&auto=format"
+                    alt="">
+                <div class="cotener2">
+                    <div data-scroll data-scroll-speed="-1" class="dets">
+                        <p><strong>&#x2022;</strong>SHOP <strong>GIFTS FOR GOOD</strong><strong>></strong></p>
+                        <div class="box">
+                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/3ab2d63c7e5ce5b1d39a1880e2a274771573ccbe-5000x5000.png/DSC0058_Dexter%20Kim.png?w=640&h=640&auto=format"
+                                alt="">
+                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/f1fa7f03dfd062ba551730e16a75d682058e6ed8-6241x4161.png/DSC0002_Dexter%20Kim.png?rect=1528,1412,3676,2727&fp-x=0.5393835616438357&fp-y=0.667119173968489&w=640&h=475&fit=crop&crop=focalpoint&auto=format"
+                                alt="">
+                        </div>
+                        <div class="box2">
+                            <h5>THE CANDLE-LIT DINER KIT </h5>
+                            <h5>T TOTALER X TWO GOOD NAIVE TEA</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="elem elem3">
+                <img data-scroll data-scroll-speed="1"
+                    src="https://cdn.sanity.io/images/w8f1ak3c/production/d3151106849ff2494d66916cf554c68a0603444d-902x1500.png/Rectangle%20220.png?rect=1,0,900,1500&w=640&h=1067&fit=min&auto=format"
+                    alt="">
+                <div class="contener3">
+                    <div data-scroll data-scroll-speed="-1" class="dets">
+                        <ul>
+                            <li>SHOP <span>BATH</span> <span>></span></li>
+                        </ul>
+                        <div class="box">
+                            <img id="botel"
+                                src="https://cdn.sanity.io/images/w8f1ak3c/production/63474079ab0c7723b75bd63b24d8bbc652349640-1408x1408.png/Cleanse%20&%20Nourish%20Hand%20Wash%20Two%20Good%20Co.png?rect=0,117,1408,1291&fp-x=0.5&fp-y=0.5416666666666666&w=640&h=587&fit=crop&crop=focalpoint&auto=format"
+                                alt="">
+                            <img id="botel"
+                                src="https://cdn.sanity.io/images/w8f1ak3c/production/99866b12faf44f7490e6037dc197947334ce0a72-1408x1408.png/Nourish%20&%20Soothe%20Hand%20Lotion%20Two%20Good%20Co.png?w=640&h=640&auto=format"
+                                alt="">
+                        </div>
+                        <div class="box2">
+                            <h5>CLEANSE & NAURISH HAND WASH </h5>
+                            <h5>NAURISH & SOOTHE HAND LOTION</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="page3">
+            <div class="product-details">
+                <h1>WE BELIEVE IN PEOPLE, UNTIL THEY BELIEVE IN THEMSELVES AGAIN.</h1>
+                <div class="summary">
+                    <h3>Everything we do is designed to rebuild self worth and independence, in order to break free from
+                        the cycle of disadvantage.</h5>
+                        <h3>With every purchase you make with us, you're helping to change the course of someone's life;
+                            you're walking alongside vulnerable women as they find their way home again.</h5>
+                            <h4>SHOP TO SUPPORT</h4>
+                </div>
+            </div>
+            <div id="child1" class="child">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/adb77436d60e62d2b5b0574016abcc864b8e65b0-4498x2999.png/DSC0078_Dexter%20Kim.png?rect=470,108,3458,2760&fp-x=0.4888698630136987&fp-y=0.49614340367765025&w=1024&h=817&fit=crop&crop=focalpoint&auto=format"
+                    alt="">
+                <h5>Change the course cook kit</h5>
+                <h6>$96</h6>
+            </div>
+            <div id="child2" class="child">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/4206e9c3f7ab098369c39a2194b82eeca6bb0664-6166x4111.png/DSC0005_Dexter%20Kim.png?rect=2,0,6163,4111&w=1024&h=683&auto=format"
+                    alt="">
+                <h5>The cookbook due kit</h5>
+                <h6>$72</h6>
+
+            </div>
+            <div id="child3" class="child2">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d38a94692dcb9250bb49632883f8e31c4a11e123-1408x1408.png/Two%20Hugs%20Candle%20Two%20Good%20Co.png?w=1024&h=1024&auto=format"
+                    alt="">
+                <h5>two hugs candle</h5>
+                <h6>$69</h6>
+            </div>
+            <div id="child4" class="child2">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/5ff174456e7f3a000b5bcdd6768155d29570c39b-5000x5000.png/Good-Nights-Sleep-Pack-Expanded-Two-Good-Co.png?w=1024&h=1024&auto=format"
+                    alt="">
+                <h5>The good night's sleep care pack</h5>
+                <h6>$96</h6>
+            </div>
+        </div>
+        <div class="page4">
+            <div class="story">
+                <h1>OUR IMPACT.</h1>
+                <h3>The thing is, we don't save anyone.</h3>
+                <h3>What we do is provide a safe space for women to change the course of their own lives.</h3>
+                <h3>After many years of living in crisis, abuse and complex trauma, restoring self-worth is foundational
+                    for independence. We believe that through experiences that promote love and respect, we can spark
+                    and nurture a sense of self-worth for those on the path of healing.</h3>
+                <h4>HERE'S HOW WE DO IT</h4>
+            </div>
+            <div class="storyimg">
+                <img class="image1" data-scroll data-scroll-speed="1"
+                    src="https://cdn.sanity.io/images/w8f1ak3c/production/943f8f43b76b4e030f41deddca1edd44170fee39-5504x8256.jpg/Christina-Maria-Jes-Lindsay-9143.jpg?fp-x=0.5&fp-y=0.5&w=640&h=947&fit=crop&crop=focalpoint&auto=format"
+                    alt="">
+                <img data-scroll data-scroll-speed="1"
+                    src="https://cdn.sanity.io/images/w8f1ak3c/production/84da7b8b510e006ce0ca22769d93bb6c044945f6-5504x8256.jpg/Patricia-Work-Work-Good-Stories-Two-Good-Co.jpg?rect=0,56,5504,8144&w=640&h=947&fit=min&auto=format"
+                    alt="">
+            </div>
+        </div>
+        <div class="page5">
+            <div class="endpage">
+                <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
+                <i class="ri-arrow-right-line"></i>
+            </div>
+        </div>
+        <div class="page6">
+            <div class="card1 card">
+                <h3>CONNECT WITH US</h3>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Twitter</li>
+                    <li>LinkedIn</li>
+                    <li>YouTube</li>
+                </ul>
+            </div>
+            <div class="imagcon">
+                <svg id="twogoodlogo" width="62" height="63" viewBox="0 0 62 63" fill="none"
+                    xmlns="http://www.w3.org/2000/svg" class="go1438215768" style="transform: translate(0px, 0px);">
+                    <path
+                        d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
+                        fill="currentColor"></path>
+                    <path
+                        d="M14.793 0C10.872 0 7.11154 1.59236 4.33897 4.42677C1.56639 7.26119 0.00878906 11.1055 0.00878906 15.114C0.00878906 19.1224 1.56639 22.9667 4.33897 25.8011C7.11154 28.6355 10.872 30.2279 14.793 30.2279C18.714 30.2279 22.4744 28.6355 25.247 25.8011C28.0196 22.9667 29.5772 19.1224 29.5772 15.114C29.5772 11.1055 28.0196 7.26119 25.247 4.42677C22.4744 1.59236 18.714 0 14.793 0Z"
+                        fill="currentColor"></path>
+                    <path d="M36.9805 32.7422L32.0366 37.7963L56.6819 62.9913L61.6258 57.9372L36.9805 32.7422Z"
+                        fill="currentColor"></path>
+                    <path d="M56.6836 32.7485L32.0383 57.9435L36.9822 62.9976L61.6275 37.8026L56.6836 32.7485Z"
+                        fill="currentColor"></path>
+                    <path d="M4.94386 32.7464L0 37.8005L24.6453 62.9955L29.5892 57.9414L4.94386 32.7464Z"
+                        fill="currentColor"></path>
+                    <path d="M24.647 32.7527L0.00170898 57.9477L4.94557 63.0018L29.5909 37.8068L24.647 32.7527Z"
+                        fill="currentColor"></path>
+                </svg>
+
+
+            </div>
+            <div class="card2 card">
+                <h3>THE NITTY GRITTIES</h3>
+                <ul>
+                    <li>Good Things FAQs</li>
+                    <li>Good Food FAQs</li>
+                    <li>Good Places</li>
+                    <li>Pathways</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
+        </div>
+        <div class="page6-part2">
+            <h3>© TWO GOOD CO.2024 TERMS OF USE PRIVACY POLICY</h3>
+            <h4>We are proud and privileged to have our home on this land, and to be able to continue the long tradition
+                of community coming together around food, begun thousands of years ago by First Nations peoples. As we
+                stand together on this unceded land, we acknowledge our First Nations people, are the original
+                custodians of this land, and we recognise their deep connection to land, water, sky and community which
+                continues today. We pay our deep respects to community elders, past, present and emerging, for they hold
+                the memories, the traditions, the culture and hopes of Aboriginal and Torres Strait Islander peoples.
+                Always was, always will be Aboriginal land.</h4>
+            <h5 class="GRAYSCALE">ACKNOWLEDGEMENT OF COUNTRY</h5>
+        </div>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"
+        integrity="sha512-1PKqXBz2ju2JcAerHKL0ldg0PT/1vr3LghYAtc59+9xy8e19QEtaNUyt1gprouyWnpOPqNJjL4gXMRMEpHYyLQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="/javascripts/script.js"></script>
+<% include ./partial/footer.ejs %>
